test/typecheck/good/cond.ks
int main()
{
    if (3 < 5) {
        return 5;
    }
    return 2;
}
