test/typecheck/bad/invalid_condition.ks
int main()
{
    if ( 4 )
    {
        return 5;
    }
    return 6;
}